2.06
----------------
- Fix build of phone on Debian Potato systems
- Fix bug in FAL where it truncated some binary files in stream mode.
- Improve performance and system overhead of ctermd & sethost
- Fixed & tidied RPM building
- Fixed phone bug so you can dial users by node number now.
- A small number of potential buffer overflows removed from dnetd & 
  libdnet_daemon.
- Fixed compilation of phone on SuSE 6.2 & RedHat 6.2 systems


2.05  3 Apr 2000
----------------
- Fixed bug in FAL where it sent .DIR for a directory name but didn't
  recognise it when it came back.
- Some bugfixes in librms


2.04  5 Feb 2000
----------------
- Fixed random crash in FAL when creating multiple files
- Fixed a memory leak in dncopy sending multiple files
- Fixed compilation on Slackware; I love linux having millions of distros :-(
- Made startnet give out more friendly messages
- dncopy now consults the DNCOPY_OPTIONS environment variable for default
  command-line arguments.
- Added RFA file access to FAL - this is more useful than it sounds, honest.
- Added support for files with variable length records (non-stream) to FAL.
  This needs metadata (-m) enabled.
- Fixed bug in fal where OOB ACCOMP messages never got a response. This was
  most obvious when editting a large file via EDT and quitting near the top.
- Removed dncopy.README as it didn't say anything anyway
- Include a modified dnping with all sorts of new features, submitted by 
  Rob Davies. man page by me.
- Sethost now supports RSTS/RSX and (allegedly) TOPS-20! Thanks to
  Paul Koning for the patch.
- Include rmtermd from Paul Koning so you can connect your PDP machines to 
  Linux too.

2.03  9 Dec 1999
----------------
- RPMs now include the decnetconf script.
- RPMs now include some previously missing man pages 
- Corrected dndir so that it works with DECnet/E.
  Thanks to Paul Koning <pkoning@xedia.com> for the patch. I've reworked it
  a bit so if it doesn't work blame me and not him.