@@ -5,15 +5,17 @@
 *.bak
 *~
 *#
+*.#*
 *auto*
 */excludes-backup
 */TAGS
-*/*tgz
+*tgz
 */test*
 */sedt.rem
 */debian-changelog
 */LOG*
-*/libdap/libdap.so*
+*lib*so*
+*lib*a
 */fal/fal
 */fal/*auto_types*
 */dndir/dndir
@@ -21,12 +23,6 @@
 */dnsubmit/dnprint
 */dndel/dndel
 */dntask/dntask
-*/libdnet/libdnet.a
-*/libdnet/libdnet.so*
-*/libdaemon/libdnet_daemon.so*
-*/libdaemon/libdnet_daemon.a
-*/librms/librms.a
-*/librms/librms.so*
 */librms/example
 */librms/t_example
 */apps/sethost
@@ -38,7 +34,6 @@
 */dncopy/dntype
 */mail/vmsmaild
 */mail/sendvmsmail
-*/mail/uulib/libuu.a
 */phone/phone
 */phone/phoned
 */dnetd/dnetd
@@ -48,4 +43,8 @@
 */debian/tmp/*
 */rpmbuild
 */rpmbuild/*
-
+*CVS
+*CVS/*
+*/BUILD*
+*/RPMS*
+*.cvsignore
