@@ -4,10 +4,11 @@
 - Fix bug in FAL where it truncated some binary files in stream mode.
 - Improve performance and system overhead of ctermd & sethost
 - Fixed & tidied RPM building
-- Fixed phone bug so you can dial users by node number now.
+- Fixed phone bug so you can dial users by node number now
 - A small number of potential buffer overflows removed from dnetd & 
-  libdnet_daemon.
+  libdnet_daemon
 - Fixed compilation of phone on SuSE 6.2 & RedHat 6.2 systems
+- rms_open with O_CREAT is now useful
 
 
 2.05  3 Apr 2000
